cleanup: fix grids on mobile

--- a/pages/.vitepress/theme/custom.scss
+++ b/pages/.vitepress/theme/custom.scss
@@ -27,6 +27,11 @@
         margin: 0;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+
+        @media screen and (max-width: 37.5rem){
+           grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+        }
+        
         min-width: 100%;
         padding: 0;
         gap: 6px;
@@ -66,6 +71,10 @@
         padding: 0;
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+
+        @media screen and (max-width: 37.5rem){
+            grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+        }
         min-width: 100%;
         gap: 10px;
 
